--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ Bootstrap 5 HTML CSS Template
                     <div class="row">
 
                         <div class="col-lg-12 col-12">
-                            <form class="custom-form hero-form" action="mailto:6431@hisarschool.k12.tr" method="post" enctype="text/plain">
+                            <form class="custom-form hero-form" action="https://formsubmit.co/6431@hisarschool.k12.tr" method="post" enctype="text/plain">
                                  <!-- action 'Dan hemen sonra -- method="get" role="form"> -->
 
 
