--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ Bootstrap 5 HTML CSS Template
                     <div class="row">
 
                         <div class="col-lg-12 col-12">
-                            <form class="custom-form hero-form" action="https://formsubmit.co/761b05556386402d9997c7dac08ea015" method="post" enctype="text/plain">
+                            <form class="custom-form hero-form" action="https://formsubmit.co/761b05556386402d9997c7dac08ea015" method="post" > 
                                  <!-- action 'Dan hemen sonra -- method="get" role="form"> -->
 
 
