--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ Bootstrap 5 HTML CSS Template
                     <div class="row">
 
                         <div class="col-lg-12 col-12">
-                            <form class="custom-form hero-form" action="https://formsubmit.co/761b05556386402d9997c7dac08ea015" method="post" > 
+                            <form class="custom-form hero-form" action="https://formsubmit.co/761b05556386402d9997c7dac08ea015" method="POST" role="form" > 
                                  <!-- action 'Dan hemen sonra -- method="get" role="form"> -->
 
 
@@ -949,9 +949,9 @@ Bootstrap 5 HTML CSS Template
 
                                             <select class="form-select form-control" name="topic" id="topic" aria-label="Default select example">
                                                 <option selected>Topic</option>
-                                                <option value="1">FRC</option>
-                                                <option value="2">Events</option>
-                                                <option value="2">Other</option>
+                                                <option value="frc related">FRC</option>
+                                                <option value="events related">Events</option>
+                                                <option value="other">Other</option>
                                             </select>
                                         </div>
                                     </div>
@@ -962,9 +962,9 @@ Bootstrap 5 HTML CSS Template
 
                                             <select class="form-select form-control" name="job" id="job" aria-label="Default select example">
                                                 <option selected>Who are you?</option>
-                                                <option value="1">Student</option>
-                                                <option value="2">Parent</option>
-                                                <option value="2">Other</option>
+                                                <option value="student">Student</option>
+                                                <option value="parent">Parent</option>
+                                                <option value="other">Other</option>
                                             </select>
                                         </div>
                                     </div>
@@ -976,9 +976,9 @@ Bootstrap 5 HTML CSS Template
 
                                             <select class="form-select form-control" name="first" id="first" aria-label="Default select example">
                                                 <option selected>FIRST Involvement</option>
-                                                <option value="1">Team Member</option>
-                                                <option value="2">Mentor</option>
-                                                <option value="2">None</option>
+                                                <option value="team member">Team Member</option>
+                                                <option value="mentor">Mentor</option>
+                                                <option value="neither">None</option>
                                             </select>
                                         </div>
                                     </div>
