--- a/index.html
+++ b/index.html
@@ -994,11 +994,11 @@ Bootstrap 5 HTML CSS Template
                                             <span class="text-white mb-lg-0 mb-md-0 me-2">Learn about:</span>
 
                                             <div>
-                                                <a href="job-listings.html" class="badge">Event details</a>
+                                                <a href="#community-involvement" class="badge">Event details</a>
 
-                                                <a href="job-listings.html" class="badge">Clubs & Organizations</a>
+                                                <a href="#community-involvement" class="badge">Clubs & Organizations</a>
 
-                                                <a href="job-listings.html" class="badge">FIRST Related Activities</a>
+                                                <a href="" class="badge">FIRST Related Activities</a>
                                             </div>
                                         </div>
                                     </div>
@@ -1029,60 +1029,14 @@ Bootstrap 5 HTML CSS Template
                             </div>
                         </div>  
 
-                        <p class="mb-2">
-                            <i class="custom-icon bi-globe me-1"></i>
-
-                            <a href="#" class="site-footer-link">
-                                www.jobbportal.com
-                            </a>
-                        </p>
-
-                        <p class="mb-2">
-                            <i class="custom-icon bi-telephone me-1"></i>
-
-                            <a href="tel: 305-240-9671" class="site-footer-link">
-                                305-240-9671
-                            </a>
-                        </p>
-
-                        <p>
-                            <i class="custom-icon bi-envelope me-1"></i>
-
-                            <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                info@jobportal.co
-                            </a>
-                        </p>
+                       
 
                     </div>
 
-                    <div class="col-lg-2 col-md-3 col-6 ms-lg-auto">
-                        <h6 class="site-footer-title" style="color: whitesmoke;">Company</h6>
+                 
 
-                        <ul class="footer-menu" >
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link" style="color: whitesmoke;">About</a></li>
+                    <div class="col-lg-12 col-md-8 col-12 mt-3 mt-lg-0">
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link" style="color: whitesmoke;">Blog</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link" style="color: whitesmoke;">Jobs</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link" style="color: whitesmoke;">Contact</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-2 col-md-3 col-6">
-                        <h6 class="site-footer-title" style="color: whitesmoke;">Resources</h6>
-
-                        <ul class="footer-menu">
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link" style="color: whitesmoke;">Guide</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link" style="color: whitesmoke;"> How it works</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link" style="color: whitesmoke;">Salary Tool</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-4 col-md-8 col-12 mt-3 mt-lg-0">
-                        <h6 class="site-footer-title" style="color: whitesmoke;">Newsletter</h6>
 
                         <form class="custom-form newsletter-form" action="mailto: 643@hisarschool.k12.tr" method="post" role="form" style="background-color: #f39b11">
                             <h6 class="site-footer-title" style="color: whitesmoke;">Get Notified!</h6>
