--- a/index.html
+++ b/index.html
@@ -1068,23 +1068,20 @@ Bootstrap 5 HTML CSS Template
                         <div class="col-lg-5 col-12 mt-2 mt-lg-0">
                             <ul class="social-icon">
                                 <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-twitter"></a>
+                                    <a href="https://twitter.com/HisarCS" class="social-icon-link bi-twitter"></a>
+                                </li>
+
+
+                                <li class="social-icon-item">
+                                    <a href="https://tr.linkedin.com/in/hisar-cs-52a01b234?trk=public_profile_browsemap" class="social-icon-link bi-linkedin"></a>
                                 </li>
 
                                 <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-facebook"></a>
+                                    <a href="https://www.instagram.com/hisarcs/" class="social-icon-link bi-instagram"></a>
                                 </li>
 
                                 <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-linkedin"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-instagram"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-youtube"></a>
+                                    <a href="https://www.youtube.com/@hisarcs2526" class="social-icon-link bi-youtube"></a>
                                 </li>
                             </ul>
                         </div>
